--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">MyTaskManagingMaster</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_dashboard">Calendar</string>
     <string name="title_notifications">Notifications</string>
     <string name="login">Login</string>
     <string name="email"></string>
